<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hollerback</string>
    <string name="action_settings">Settings</string>

    <!-- Button Strings -->
    <string name="signin">Log In</string>
    <string name="signup">Sign Up</string>

    <!-- Sign In/Sign Up -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="number">555&#8211;555&#8211;5555</string>
    <string name="header_country_code_phone">Country Code and Phone Number</string>
    <string name="header_account">Account</string>
    <string name="no_network_connection_toast">Not connected to Internet</string>
    <string name="new_conversation">New Conversation</string>
    <string name="error_name_null">Name is not valid</string>
    <string name="error_email">Email not valid</string>
    <string name="error_phone">Phone number is not valid</string>
    <string name="error_password">Password not valid</string>
    <string name="signup_agreement">By clicking Submit you are indicating that you have read and agree to the Privacy Policy and Terms of Service</string>
    <string name="empty_conversation_list">Start using Hollerback by sending a video message to your friends!</string>

</resources>