<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/textfield_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#fff"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/textfield_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textfield_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#fff"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/textfield_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textfield_email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#fff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tv_header_counter_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textfield_password"
        android:text="@string/header_country_code_phone" />

    <RelativeLayout
        android:id="@+id/rl_country_selector"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_phone_number_code_height"
        android:layout_below="@+id/tv_header_counter_phone"
        android:background="#fff"
        android:clickable="true" >

        <TextView
            android:id="@+id/tv_country_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_phone_number_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tv_phone_number_code_height"
        android:layout_below="@+id/rl_country_selector"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:id="@+id/tv_phone_number_code"
            android:layout_width="@dimen/tv_phone_number_code_width"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <EditText
            android:id="@+id/textfield_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_phone_number_code"
            android:background="#fff"
            android:hint="@string/number"
            android:inputType="number"
            android:padding="10dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/register_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_phone_number_container"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="Submit" />

</RelativeLayout>